--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -148,6 +148,15 @@
         <item name="android:fontFamily">Roboto_Regular</item>
     </style>
 
+    <style name="header_h1_text_title_withoutbold">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:paddingTop">11dp</item>
+        <item name="android:textColor">@color/header_txt</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">Roboto_Regular</item>
+    </style>
+
     <style name="header_h1_text_titlee">
         <item name="android:ellipsize">end</item>
         <item name="android:paddingTop">10dp</item>
