--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -713,10 +713,69 @@
                         android:text="Upload Images"
                         android:visibility="visible" />
 
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <RelativeLayout
+                    android:id="@+id/planationAuditRel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/planationAudit_logo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/harvestingvisitlogoresized"
+                        android:visibility="visible" />
+
+                    <TextView
+                        android:id="@+id/planationAudit_title_txt"
+                        style="@style/moduleHomeBtnStyle"
+                        android:layout_below="@+id/planationAudit_logo"
+                        android:text="Plantation Audit"
+                        android:visibility="visible" />
+
+
+                </RelativeLayout>
+
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="match_parent" />
+
+                <RelativeLayout
+                    android:visibility="gone"
+                    android:id="@+id/emptylayout"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/view_prosepective_plots_homelogo_new"
+                        android:visibility="visible" />
+
+                    <TextView
+                        style="@style/moduleHomeBtnStyle"
+                        android:layout_below="@+id/images_logo"
+                        android:text="Upload Images"
+                        android:visibility="visible" />
 
                 </RelativeLayout>
 
             </LinearLayout>
+
 
 
         </LinearLayout>
