--- a/app/src/main/res/layout/fragment_plot_details.xml
+++ b/app/src/main/res/layout/fragment_plot_details.xml
@@ -308,6 +308,8 @@
                         android:text="@string/plot_area" />
 
                     <EditText
+                        android:focusable="false"
+                        android:editable="false"
                         android:id="@+id/plot_area_edt"
                         style="@style/editTxt_normal"
                         android:layout_width="0dp"
