--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -168,6 +168,94 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <RelativeLayout
+                    android:id="@+id/conversionRel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/conversion_logo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/conversion_homelogo_new"
+                        android:visibility="visible" />
+
+                    <TextView
+                        android:id="@+id/conversion_title_txt"
+                        style="@style/moduleHomeBtnStyle"
+                        android:layout_below="@+id/conversion_logo"
+                        android:text="@string/conversion"
+                        android:visibility="visible" />
+
+
+                </RelativeLayout>
+
+<!--                <RelativeLayout-->
+<!--                    android:id="@+id/conversionRel"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1">-->
+
+<!--                    <ImageView-->
+<!--                        android:id="@+id/conversion_logo"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_centerInParent="true"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:src="@drawable/conversion_homelogo_new"-->
+<!--                        android:visibility="visible" />-->
+
+<!--                    <TextView-->
+<!--                        android:id="@+id/conversion_title_txt"-->
+<!--                        style="@style/moduleHomeBtnStyle"-->
+<!--                        android:layout_below="@+id/conversion_logo"-->
+<!--                        android:text="@string/conversion"-->
+<!--                        android:visibility="visible" />-->
+
+
+<!--                </RelativeLayout>-->
+
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="match_parent" />
+                <RelativeLayout
+                    android:id="@+id/cropMaintenanceRel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+
+                    <ImageView
+                        android:id="@+id/cm_logo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/crop_maintenance_homelogo_new"
+                        android:visibility="visible" />
+
+                    <TextView
+                        android:id="@+id/cm_title_txt"
+                        style="@style/moduleHomeBtnStyle"
+                        android:layout_below="@+id/cm_logo"
+                        android:text="@string/palmcare"
+                        android:visibility="visible" />
+
+
+                </RelativeLayout>
+
+
+            </LinearLayout>
+
 <!--            <LinearLayout-->
 <!--                android:layout_width="match_parent"-->
 <!--                android:layout_height="400dp"-->
@@ -236,68 +324,68 @@
                 android:layout_width="match_parent"
                 android:layout_height="2dp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="400dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="400dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:orientation="horizontal">-->
 
-                <RelativeLayout
-                    android:id="@+id/conversionRel"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
+<!--                <RelativeLayout-->
+<!--                    android:id="@+id/conversionRel"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1">-->
 
-                    <ImageView
-                        android:id="@+id/conversion_logo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:layout_marginTop="10dp"
-                        android:src="@drawable/conversion_homelogo_new"
-                        android:visibility="visible" />
+<!--                    <ImageView-->
+<!--                        android:id="@+id/conversion_logo"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_centerInParent="true"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:src="@drawable/conversion_homelogo_new"-->
+<!--                        android:visibility="visible" />-->
 
-                    <TextView
-                        android:id="@+id/conversion_title_txt"
-                        style="@style/moduleHomeBtnStyle"
-                        android:layout_below="@+id/conversion_logo"
-                        android:text="@string/conversion"
-                        android:visibility="visible" />
-
-
-                </RelativeLayout>
-
-                <View
-                    android:layout_width="2dp"
-                    android:layout_height="match_parent" />
-
-                <RelativeLayout
-                    android:id="@+id/cropMaintenanceRel"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
+<!--                    <TextView-->
+<!--                        android:id="@+id/conversion_title_txt"-->
+<!--                        style="@style/moduleHomeBtnStyle"-->
+<!--                        android:layout_below="@+id/conversion_logo"-->
+<!--                        android:text="@string/conversion"-->
+<!--                        android:visibility="visible" />-->
 
 
-                     <ImageView
-                        android:id="@+id/cm_logo"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:layout_centerInParent="true"
-                         android:layout_marginTop="10dp"
-                        android:src="@drawable/crop_maintenance_homelogo_new"
-                        android:visibility="visible" />
+<!--                </RelativeLayout>-->
 
-                    <TextView
-                        android:id="@+id/cm_title_txt"
-                        style="@style/moduleHomeBtnStyle"
-                        android:layout_below="@+id/cm_logo"
-                        android:text="@string/cropMaintenance"
-                        android:visibility="visible" />
+<!--                <View-->
+<!--                    android:layout_width="2dp"-->
+<!--                    android:layout_height="match_parent" />-->
+
+<!--                <RelativeLayout-->
+<!--                    android:id="@+id/cropMaintenanceRel"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1">-->
 
 
-                </RelativeLayout>
+<!--                     <ImageView-->
+<!--                        android:id="@+id/cm_logo"-->
+<!--                         android:layout_width="wrap_content"-->
+<!--                         android:layout_height="wrap_content"-->
+<!--                         android:layout_centerInParent="true"-->
+<!--                         android:layout_marginTop="10dp"-->
+<!--                        android:src="@drawable/crop_maintenance_homelogo_new"-->
+<!--                        android:visibility="visible" />-->
 
-            </LinearLayout>
+<!--                    <TextView-->
+<!--                        android:id="@+id/cm_title_txt"-->
+<!--                        style="@style/moduleHomeBtnStyle"-->
+<!--                        android:layout_below="@+id/cm_logo"-->
+<!--                        android:text="@string/palmcare"-->
+<!--                        android:visibility="visible" />-->
+
+
+<!--                </RelativeLayout>-->
+
+<!--            </LinearLayout>-->
 
             <View
                 android:layout_width="match_parent"
@@ -662,35 +750,6 @@
                 android:layout_height="400dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
-
-                <RelativeLayout
-                    android:id="@+id/harvestingRel"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
-
-                    <ImageView
-                        android:id="@+id/harvesting_logo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/harvestingvisitlogoresized"
-                        android:visibility="visible" />
-
-                    <TextView
-                        android:id="@+id/harvesting_title_txt"
-                        style="@style/moduleHomeBtnStyle"
-                        android:layout_below="@+id/harvesting_logo"
-                        android:text="Harvesting Visit"
-                        android:visibility="visible" />
-
-
-                </RelativeLayout>
-
-                <View
-                    android:layout_width="2dp"
-                    android:layout_height="match_parent" />
-
                 <RelativeLayout
                     android:id="@+id/imagesRel"
                     android:layout_width="0dp"
@@ -714,14 +773,33 @@
                         android:visibility="visible" />
 
                 </RelativeLayout>
+<!--                <RelativeLayout-->
+<!--                    android:id="@+id/harvestingRel"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1">-->
 
-            </LinearLayout>
+<!--                    <ImageView-->
+<!--                        android:id="@+id/harvesting_logo"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_centerInParent="true"-->
+<!--                        android:src="@drawable/harvestingvisitlogoresized"-->
+<!--                        android:visibility="visible" />-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="400dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
+<!--                    <TextView-->
+<!--                        android:id="@+id/harvesting_title_txt"-->
+<!--                        style="@style/moduleHomeBtnStyle"-->
+<!--                        android:layout_below="@+id/harvesting_logo"-->
+<!--                        android:text="Harvesting Visit"-->
+<!--                        android:visibility="visible" />-->
+
+
+<!--                </RelativeLayout>-->
+
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="match_parent" />
 
                 <RelativeLayout
                     android:id="@+id/planationAuditRel"
@@ -746,35 +824,44 @@
 
 
                 </RelativeLayout>
-
-                <View
-                    android:layout_width="2dp"
-                    android:layout_height="match_parent" />
-
-                <RelativeLayout
-                    android:visibility="gone"
-                    android:id="@+id/emptylayout"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
-
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/view_prosepective_plots_homelogo_new"
-                        android:visibility="visible" />
-
-                    <TextView
-                        style="@style/moduleHomeBtnStyle"
-                        android:layout_below="@+id/images_logo"
-                        android:text="Upload Images"
-                        android:visibility="visible" />
-
-                </RelativeLayout>
-
             </LinearLayout>
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="400dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:orientation="horizontal">-->
+
+<!--             -->
+
+<!--                <View-->
+<!--                    android:layout_width="2dp"-->
+<!--                    android:layout_height="match_parent" />-->
+
+<!--                <RelativeLayout-->
+<!--                   -->
+<!--                    android:id="@+id/emptylayout"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1">-->
+
+
+<!--                    <ImageView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_centerInParent="true"-->
+<!--                        android:src="@drawable/view_prosepective_plots_homelogo_new"-->
+<!--                        android:visibility="visible" />-->
+
+<!--                    <TextView-->
+<!--                        style="@style/moduleHomeBtnStyle"-->
+<!--                        android:layout_below="@+id/images_logo"-->
+<!--                        android:text="Upload Images"-->
+<!--                        android:visibility="visible" />-->
+
+<!--                </RelativeLayout>-->
+
+<!--            </LinearLayout>-->
 
 
 
