--- a/app/src/main/res/layout/fragment_inter_crop_details.xml
+++ b/app/src/main/res/layout/fragment_inter_crop_details.xml
@@ -119,8 +119,7 @@
                 android:layout_height="250dp"
                 android:layout_centerInParent="true"
                 android:background="@mipmap/crops"
-                android:scaleType="fitXY"
-                />
+                android:scaleType="fitXY" />
 
 
             <RelativeLayout
