--- a/app/src/main/res/layout/adapter_fertilization_application.xml
+++ b/app/src/main/res/layout/adapter_fertilization_application.xml
@@ -94,6 +94,7 @@
 
 
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/deleteIcon"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
