--- a/app/src/main/res/layout/content_crop_maintenance_home_screen.xml
+++ b/app/src/main/res/layout/content_crop_maintenance_home_screen.xml
@@ -108,6 +108,7 @@
                 android:text="@string/health_of_plantation" />
 
             <Button
+                android:visibility="gone"
                 android:id="@+id/harvestDetailsBtn"
                 style="@style/moduleBtnStyle"
                 android:text="@string/harvest_details" />
