--- a/app/src/main/res/layout/fragment_bank_details.xml
+++ b/app/src/main/res/layout/fragment_bank_details.xml
@@ -17,6 +17,7 @@
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:clickable="true"
+         android:layout_marginTop="50dp"
          android:orientation="vertical">
 
     <LinearLayout
