--- a/app/src/main/res/layout/fragment_inter_crop_details.xml
+++ b/app/src/main/res/layout/fragment_inter_crop_details.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
+        android:layout_marginTop="50dp"
         android:paddingTop="?attr/actionBarSize">
 
         <RelativeLayout
