--- a/app/src/main/res/layout/fragment_pest_details.xml
+++ b/app/src/main/res/layout/fragment_pest_details.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:layout_marginTop="50dp"
         android:paddingTop="?attr/actionBarSize">
 
         <LinearLayout
@@ -37,6 +38,17 @@
                     android:text="@string/Add_Complaint"
                     android:padding="14dp"
                     android:layout_marginRight="15dp"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/pestpdfBtn"
+                    style="@style/dialogBasicBtnStyle"
+                    android:text="View PDF"
+                    android:padding="4dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_gravity="end"
+                    android:visibility="gone"/>
 
                 <Button
                     android:layout_width="wrap_content"
@@ -80,7 +92,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="Chemical Used" />
+                    android:text="Pesticide Used" />
 
                 <Spinner
                     android:id="@+id/nameOfChemicalUsedSpin"
@@ -139,7 +151,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="@string/recomd_chemical" />
+                    android:text="Pesticide Recommended" />
 
                 <Spinner
                     android:id="@+id/nameOfChemicalUsedSpinRecmnd"
