--- a/app/src/main/res/layout/fragment_white_fly.xml
+++ b/app/src/main/res/layout/fragment_white_fly.xml
@@ -14,16 +14,37 @@
 
     </include>
 
-    <Button
-        android:layout_marginRight="10dp"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginTop="10dp"
-        android:id="@+id/whiteflylastvisitdataBtn"
-        style="@style/dialogBasicBtnStyle"
-        android:text="@string/last_visit_data"
-        android:padding="4dp"
-        android:layout_gravity="end"/>
+        android:gravity="right">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/whiteflypdfBtn"
+            style="@style/dialogBasicBtnStyle"
+            android:text="View PDF"
+            android:padding="4dp"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="end"
+            android:visibility="gone"/>
+
+        <Button
+            android:layout_marginRight="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:id="@+id/whiteflylastvisitdataBtn"
+            style="@style/dialogBasicBtnStyle"
+            android:text="@string/last_visit_data"
+            android:padding="4dp"
+            android:layout_gravity="end"/>
+    </LinearLayout>
+
+
 
     <Button
         android:id="@+id/secnodpreviousfy"
