--- a/app/src/main/res/layout/pestlastvisteddata.xml
+++ b/app/src/main/res/layout/pestlastvisteddata.xml
@@ -74,7 +74,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.5"
                 android:gravity="center_vertical"
-                android:text="Chemical Used" />
+                android:text="Pesticide Used" />
 
             <TextView
                 style="@style/header_h1_text_title"
@@ -176,7 +176,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.5"
                 android:gravity="center_vertical"
-                android:text="Recommended Chemical" />
+                android:text="Pesticide Recommended" />
             <TextView
                 style="@style/header_h1_text_title"
                 android:layout_width="0dp"
