--- a/app/src/main/res/layout/wmo_details_screen.xml
+++ b/app/src/main/res/layout/wmo_details_screen.xml
@@ -33,14 +33,35 @@
             android:orientation="vertical"
             android:paddingBottom="@dimen/mailLayMargin">
 
-            <Button
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/weedlastvisitdataBtn"
-                style="@style/dialogBasicBtnStyle"
-                android:text="@string/last_visit_data"
-                android:padding="4dp"
-                android:layout_gravity="end"/>
+                android:orientation="horizontal"
+                android:gravity="right">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/weedpdfBtn"
+                    style="@style/dialogBasicBtnStyle"
+                    android:text="View PDF"
+                    android:padding="4dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_gravity="end"
+                    android:visibility="gone"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/weedlastvisitdataBtn"
+                    style="@style/dialogBasicBtnStyle"
+                    android:text="@string/last_visit_data"
+                    android:padding="4dp"
+                    android:layout_gravity="end"/>
+            </LinearLayout>
+
+
+
 
 
             <LinearLayout
@@ -227,7 +248,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/Name_of_Chemical_Used" />
+                    android:text="Name of Weedicide Used" />
 
                 <Spinner
                     android:id="@+id/nameOfChemicalUsedSpin"
