--- a/app/src/main/res/layout/closecropmaintenancelistlayout.xml
+++ b/app/src/main/res/layout/closecropmaintenancelistlayout.xml
@@ -9,6 +9,50 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_closeclosecrop_maintenance_list">
 
+    <RelativeLayout
+        android:id="@+id/rl_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_marginTop="50dp"
+        android:background="@color/light_gray"
+        android:padding="6dp">
+
+        <EditText
+            android:id="@+id/searchtext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_edittext"
+            android:hint="Search by name or mobile number or farmer code"
+            android:inputType="textNoSuggestions|textVisiblePassword"
+            android:padding="6dp"
+            android:textColor="@color/action_color"
+            android:textSize="16sp" />
+
+        <ProgressBar
+            android:id="@+id/searchprogress"
+            style="?android:progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:layout_toLeftOf="@+id/clearsearch"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/clearsearch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="6dp"
+            android:src="@mipmap/close_icon"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
+    </RelativeLayout>
+
 
 
     <android.support.v7.widget.RecyclerView
