Added columns in PlotGapFillingDetails

--- a/app/src/main/res/layout/content_crop_maintenance_home_screen.xml
+++ b/app/src/main/res/layout/content_crop_maintenance_home_screen.xml
@@ -61,6 +61,7 @@
             <Button
                 android:id="@+id/plantationBtn"
                 style="@style/moduleBtnStyle"
+                android:visibility="gone"
                 android:text="@string/plantation_details_cm" />
             <Button
                 android:id="@+id/currentPlantation"
