--- a/app/src/main/res/layout/frag_conversion_digitalcontract.xml
+++ b/app/src/main/res/layout/frag_conversion_digitalcontract.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical">
 
         <RelativeLayout
-
+            android:id="@+id/contactlayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/common_margin"
@@ -78,5 +78,26 @@
             </LinearLayout>
 
         </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/nocontractll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/nocontract"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text="No Digital Contract Found"/>
+
+    </LinearLayout>
+
+
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
