Changes in not visited plots and Added Maps

--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -827,6 +827,42 @@
 
                 </RelativeLayout>
             </LinearLayout>
+            <LinearLayout
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:orientation="horizontal">
+
+                <RelativeLayout
+                    android:id="@+id/mapsLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:visibility="visible">
+
+
+                    <ImageView
+                        android:id="@+id/mapsicon"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/harvestingvisitlogoresized"
+                        android:visibility="visible" />
+
+                    <TextView
+                        android:id="@+id/mapText"
+                        style="@style/moduleHomeBtnStyle"
+                        android:layout_below="@+id/mapsicon"
+                        android:text="@string/maps"
+                        android:visibility="visible" />
+
+
+                </RelativeLayout>
+
+            </LinearLayout>
 
 <!--            <LinearLayout-->
 <!--                android:layout_width="match_parent"-->
