--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,6 +40,6 @@
     <color name="half_black2">#8D000000</color>
     <color name="white_new">#ffffff</color>
     <color name="pin_normal">#FFFFFF</color>
-
+    <color name="transparent">#00000000</color>
 
 </resources>
