--- a/app/src/main/res/layout/no_visitedplots.xml
+++ b/app/src/main/res/layout/no_visitedplots.xml
@@ -11,7 +11,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:id="@+id/dateSelection"
         android:orientation="horizontal">
@@ -19,7 +19,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_top_layout"
+
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -27,7 +27,6 @@
                 style="@style/header_h1_text_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="center"
                 android:text="From Date" />
 
@@ -37,7 +36,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_weight="1"
                 android:editable="false"
                 android:focusable="false"
                 android:gravity="center" />
@@ -47,7 +45,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="@dimen/margin_top_layout"
+
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -55,7 +53,6 @@
                 style="@style/header_h1_text_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="center"
                 android:text="To Date" />
 
@@ -65,7 +62,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_weight="1"
                 android:editable="false"
                 android:focusable="false"
                 android:gravity="center" />
@@ -79,74 +75,64 @@
             android:layout_marginLeft="10dp"
             android:layout_gravity="center_vertical"
             android:text="Search"
-            android:layout_marginTop="20dp"/>
-
+            android:layout_marginTop="15dp"
+            />
     </LinearLayout>
-    <RelativeLayout
-        android:id="@+id/rl_search"
+
+<!--    <android.support.design.widget.T
+        android:background="?attr/colorPrimary"abLayout-->
+<!--        android:id="@+id/tablayout"-->
+<!--        android:layout_marginLeft="10dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:layout_marginRight="10dp"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@color/green"-->
+<!--        app:tabBackground="@drawable/tab_color_selector"-->
+<!--        app:tabSelectedTextColor="@color/green"-->
+<!--        app:tabTextAppearance="@style/TabLayoutStyle"-->
+<!--        app:tabTextColor="@color/white">-->
+
+<!--        <android.support.design.widget.TabItem-->
+<!--            android:id="@+id/tabcrop"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            style="@style/Common_textView"-->
+<!--            android:text="@string/crop_maintenancevisit" />-->
+
+<!--        <android.support.design.widget.TabItem-->
+<!--            android:id="@+id/tabHarvest"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            style="@style/Common_textView"-->
+<!--            android:text="@string/harvesting" />-->
+<!--    </android.support.design.widget.TabLayout>-->
+
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginTop="50dp"
-        android:background="@color/light_gray"
-        android:padding="6dp">
+        app:tabSelectedTextColor="?attr/colorPrimary"
+        app:tabIndicatorColor="#016A0A"
+        app:tabTextColor="@android:color/black"
+        app:tabMode="fixed"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
+        app:tabIndicatorFullWidth="true"
+        app:tabMinWidth="0dp"
+        app:tabMaxWidth="0dp">
 
-        <EditText
-            android:id="@+id/searchtext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_edittext"
-            android:hint="Search by name or mobile number or farmer code"
-            android:inputType="textNoSuggestions|textVisiblePassword"
-            android:padding="6dp"
-            android:textColor="@color/action_color"
-            android:textSize="16sp" />
+</android.support.design.widget.TabLayout>
 
-        <ProgressBar
-            android:id="@+id/searchprogress"
-            style="?android:progressBarStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:layout_toLeftOf="@+id/clearsearch"
-            android:visibility="gone"
-            tools:visibility="visible" />
 
-        <ImageView
-            android:id="@+id/clearsearch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="6dp"
-            android:src="@mipmap/close_icon"
-            android:visibility="gone"
-            tools:visibility="visible" />
 
-    </RelativeLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/novisitplot_list"
+<android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:divider="@color/gray"
-        android:dividerHeight="2px">
+        android:layout_height="match_parent" />
 
-    </android.support.v7.widget.RecyclerView>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/no_text"
-        android:fontFamily="@font/hind_semibold"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:visibility="gone"
-        android:layout_gravity="center"
-        android:text="No Data Available"
-        android:textColor="@color/red"
-        android:textSize="20dp" />
 
 </LinearLayout>
