--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -141,7 +141,7 @@
     <style name="header_h1_text_title">
         <item name="android:layout_width">match_parent</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:paddingTop">11dp</item>
+
         <item name="android:textColor">@color/header_txt</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
@@ -289,4 +289,19 @@
         <item name="android:windowExitAnimation">@anim/slide_out_down</item>
     </style>
 
+    <style name="TabLayoutStyle" parent="Base.Widget.Design.TabLayout">
+    <item name="android:textSize">14dp</item>
+    <item name="android:textAllCaps">false</item>
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">14dp</item>
+    </style>
+
+    <style name="Common_textView" parent="android:Widget.TextView">
+
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:fontFamily">@font/hind_semibold</item>
+
+    </style>
 </resources>
